--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.13",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "sass": "^1.49.9",
     "typescript": "^4.6.2"
   }
 }
