--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "stripe": "^8.207.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/node": "^17.0.21",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "babel-jest": "^27.5.1",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.6.2"
   }
