--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faunadb": "^4.5.2",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
+    "nprogress": "^0.2.0",
     "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
