--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ name: Build Status
 on:
   push:
     branches: [ main ]
-    
+
 jobs:
   checks:
     runs-on: ubuntu-20.04
@@ -26,8 +26,8 @@ jobs:
       uses: schneegans/dynamic-badges-action@v1.1.0
       with:
         auth: ${{ secrets.GIST_SECRET }}
-        gistID: <your_gist_id>
-        filename: <your_repo>_coverage.json
+        gistID: 03-ignews
+        filename: 03-ignews_coverage.json
         label: coverage
         message: ${{ env.COVERAGE }}
         namedLogo: jest
