--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,35 +1,74 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Build Status
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  checks:
-    runs-on: ubuntu-20.04
+  build:
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [14.x]
+
     steps:
     - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
 
-    - name: Install modules
-      run: yarn --prefer-offline
+    # basically npm install but only installs from package-lock
+    - run: npm ci
+    - run: npm run lint
+    - run: npm t
 
-    - name: Run unit tests with coverage
+    # Only run the coverage once
+    - if: ${{ matrix.node-version == '14.x' }}
+      name: Get Coverage for badge
       run: |
-        SUMMARY="$(yarn test --coverage --coverageReporters=text-summary | tail -3 | head -1)"
+        # var SUMMARY = [
+        #   '',
+        #   '=============================== Coverage summary ===============================',
+        #   'Statements   : 32.5% ( 39/120 )',
+        #   'Branches     : 38.89% ( 21/54 )',
+        #   'Functions    : 21.74% ( 5/23 )',
+        #   'Lines        : 31.93% ( 38/119 )',
+        #   '================================================================================',
+        #   ''
+        # ];
+        # SUMMARY = SUMMARY.split('\n')[5]; // 'Lines        : 31.93% ( 38/119 )'
+        # SUMMARY = SUMMARY.split(':')[1].split('(')[0].trim(); // '31.93%'
+        SUMMARY="$(npm coverage -- --coverageReporters='text-summary' | tail -2 | head -1)"
         TOKENS=($SUMMARY)
+        # process.env.COVERAGE = '31.93%';
         echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
 
-    - name: Create Coverage Badge
-      uses: schneegans/dynamic-badges-action@v1.1.0
+        # var REF = 'refs/pull/27/merge.json';
+        REF=${{ github.ref }}
+        # console.log('github.ref: ' + REF);
+        echo "github.ref: $REF"
+        # var PATHS = REF.split('/');
+        IFS='/' read -ra PATHS <<< "$REF"
+        # var BRANCH_NAME = PATHS[1] + PATHS[2];
+        BRANCH_NAME="${PATHS[1]}_${PATHS[2]}"
+        # console.log(BRANCH_NAME); // 'pull_27'
+        echo $BRANCH_NAME
+        # process.env.BRANCH = 'pull_27';
+        echo "BRANCH=$(echo ${BRANCH_NAME})" >> $GITHUB_ENV
+    - if: ${{ matrix.node-version == '14.x' }}
+      name: Create the Badge
+      uses: schneegans/dynamic-badges-action@v1.0.0
       with:
         auth: ${{ secrets.GIST_SECRET }}
-        gistID: 03-ignews
-        filename: 03-ignews_coverage.json
-        label: coverage
+        gistID: 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
+        filename: 03-ignews__${{ env.BRANCH }}.json
+        label: Test Coverage
         message: ${{ env.COVERAGE }}
+        color: green
         namedLogo: jest
-        color: blue
-        logoColor: lightblue
