--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,9 +17,9 @@ jobs:
 
     - name: Run unit tests with coverage
       run: |
-        SUMMARY="$(yarn test --coverage --coverageReporters=text-summary | tail -3 | head -1)"
+        SUMMARY="$(yarn jest --coverage --coverageReporters=text-summary | tail -3 | head -1)"
         TOKENS=($SUMMARY)
-        echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
+        echo "COVERAGE=$(echo ${TOKENS[3]})" >> $GITHUB_ENV
 
     - name: Create Coverage Badge
       uses: schneegans/dynamic-badges-action@v1.1.0
