--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,13 @@ jobs:
         echo "COVERAGE=$(echo ${TOKENS[3]})" >> $GITHUB_ENV
 
     - name: Create Coverage Badge
-      uses: schneegans/dynamic-badges-action@v1.1.0
+      uses: schneegans/dynamic-badges-action@master
       with:
         auth: ${{ secrets.GIST_SECRET }}
-        gistID: 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
+        gistID: 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
         filename: 03-ignews_coverage.json
         label: coverage
-        message: ${{ env.GITHUB_ENV }}
+        message: ${{ env.COVERAGE }}
         namedLogo: jest
         color: blue
         logoColor: lightblue
