--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Build Status
+name: coverage badge
 
 on:
   push:
@@ -10,68 +7,28 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node-version: [14.x]
-
+  checks:
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
 
-    # basically npm install but only installs from package-lock
-    - run: npm ci
-    - run: npm run lint
-    - run: npm t
+    - name: Install modules
+      run: yarn --prefer-offline
 
-    # Only run the coverage once
-    - if: ${{ matrix.node-version == '14.x' }}
-      name: Get Coverage for badge
+    - name: Run unit tests with coverage
       run: |
-        # var SUMMARY = [
-        #   '',
-        #   '=============================== Coverage summary ===============================',
-        #   'Statements   : 32.5% ( 39/120 )',
-        #   'Branches     : 38.89% ( 21/54 )',
-        #   'Functions    : 21.74% ( 5/23 )',
-        #   'Lines        : 31.93% ( 38/119 )',
-        #   '================================================================================',
-        #   ''
-        # ];
-        # SUMMARY = SUMMARY.split('\n')[5]; // 'Lines        : 31.93% ( 38/119 )'
-        # SUMMARY = SUMMARY.split(':')[1].split('(')[0].trim(); // '31.93%'
-        SUMMARY="$(npm test -- --coverageReporters='text-summary' | tail -2 | head -1)"
+        SUMMARY="$(yarn jest --coverage --coverageReporters=text-summary | tail -3 | head -1)"
         TOKENS=($SUMMARY)
-        # process.env.COVERAGE = '31.93%';
         echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
 
-        # var REF = 'refs/pull/27/merge.json';
-        REF=${{ github.ref }}
-        # console.log('github.ref: ' + REF);
-        echo "github.ref: $REF"
-        # var PATHS = REF.split('/');
-        IFS='/' read -ra PATHS <<< "$REF"
-        # var BRANCH_NAME = PATHS[1] + PATHS[2];
-        BRANCH_NAME="${PATHS[1]}_${PATHS[2]}"
-        # console.log(BRANCH_NAME); // 'pull_27'
-        echo $BRANCH_NAME
-        # process.env.BRANCH = 'pull_27';
-        echo "BRANCH=$(echo ${BRANCH_NAME})" >> $GITHUB_ENV
-    - if: ${{ matrix.node-version == '14.x' }}
-      name: Create the Badge
-      uses: schneegans/dynamic-badges-action@v1.0.0
+    - name: Create Coverage Badge
+      uses: schneegans/dynamic-badges-action@master
       with:
         auth: ${{ secrets.GIST_SECRET }}
-        gistID: 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
-        filename: 03-ignews__${{ env.BRANCH }}.json
-        label: Test Coverage
+        gistID: 904bc2cf0f5749e4c3f011940161dedd
+        filename: 03-ignews_coverage.json
+        label: coverage
         message: ${{ env.COVERAGE }}
-        color: green
         namedLogo: jest
+        color: blue
+        logoColor: lightblue
