feat: change badge color

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         label: coverage
         message: ${{ env.COVERAGE }}
         namedLogo: jest
-        color: blue
-        logoColor: lightblue
+        color: yellow
+        logoColor: yellow
