--- a/.github/workflows/badge.js.yml
+++ b/.github/workflows/badge.js.yml
@@ -18,4 +18,4 @@ jobs:
           SUMMARY="$(yarn jest --coverage --coverageReporters=text-summary | tail -3 | head -1)"
           TOKENS=($SUMMARY)
           echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
-          echo "{"schemaVersion":1,"label":"coverage","message":"$(echo ${TOKENS[2]})","color":"blue","namedLogo":"jest","logoColor":"lighblue"} >> .data/fuir_coverage.json
+          echo "{"schemaVersion":1,"label":"coverage","message":"$(echo ${TOKENS[2]})","color":"blue","namedLogo":"jest","logoColor":"lighblue"} >> ./data/fluir_coverage.json
